--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/variables.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/variables.scss
@@ -2,6 +2,7 @@ $primary-nav-border-color: #8a8a8a;
 $primary-nav-dropdown-width: 200px;
 $primary-nav-height: 60px;
 $square-icon-size: 16px;
+$utility-nav-height: 60px;
 $utility-nav-background-color: #676767;
 
 // Off Canvas Nav
@@ -12,3 +13,6 @@ $cu-off-canvas-nav-border-secondary: #C1C1C1;
 $cu-off-canvas-nav-text: #2f2f2f;
 $cu-off-canvas-nav-background: #EAEAEA;
 $cu-off-canvas-nav-utility-background: #676767;
+
+//GCS Search box
+$gcs-search-box-height: 28px;
