updated search box markup

--- a/app/views/omni_nav_v2/omninav.html.erb
+++ b/app/views/omni_nav_v2/omninav.html.erb
@@ -129,7 +129,10 @@
     </div>
 
     <div class="nav-container primary-nav-search">
-      <%= render 'omni_nav_v2/search_box' %>
+      <div id="primary-nav-search" class="cu-search-box"></div>
+      <div class="search-results-container">
+        <div id="primary-nav-search-results" class="cu-search-results"></div>
+      </div>
     </div>
 
     <div class="nav-container global-nav">
