--- a/app/views/omni_nav_v2/_utility_nav.html.erb
+++ b/app/views/omni_nav_v2/_utility_nav.html.erb
@@ -58,9 +58,22 @@
     </div>
     <div class="utility-nav-container utility-search">
       <ul class="utility-list">
-        <li class="utility-cell search-type utility-has-dropdown"><a>Search from</a></li>
+        <li class="utility-cell search-type utility-has-dropdown">
+          <a id="selected-search-type">Search From</a>
+          <div class="utility-dropdown dropdown">
+            <ul>
+              <li class="search-type-option"><a>All</a></li>
+              <li class="search-type-option"><a>Blog Stories</a></li>
+              <li class="search-type-option"><a>Faculty</a></li>
+              <li class="search-type-option"><a>Events</a></li>
+            </ul>
+          </div>
+        </li>
         <li class="utility-cell">
-          <%= render 'omni_nav_v2/search_box' %>
+          <div id ="utility-nav-search" class="cu-search-box"></div>
+          <div class="search-results-container">
+            <div id="utility-nav-search-results" class="cu-search-results"></div>
+          </div>
         </li>
       </ul>
     </div>
