added search results overlay to markup

--- a/app/views/omni_nav_v2/_utility_nav.html.erb
+++ b/app/views/omni_nav_v2/_utility_nav.html.erb
@@ -70,9 +70,11 @@
           </div>
         </li>
         <li class="utility-cell">
-          <div id ="utility-nav-search" class="cu-search-box"></div>
-          <div class="search-results-container">
-            <div id="utility-nav-search-results" class="cu-search-results"></div>
+          <div class="cu-two-column-gcs" id ="utility-nav-search">
+            <div class="cu-search-box"></div>
+            <div class="search-results-container">
+              <div class="cu-search-results"></div>
+            </div>
           </div>
         </li>
       </ul>
