--- a/app/views/omni_nav_v2/omninav.html.erb
+++ b/app/views/omni_nav_v2/omninav.html.erb
@@ -127,20 +127,18 @@
         </div>
       </div>
     </div>
-
     <div class="nav-container primary-nav-search">
-      <div id="primary-nav-search" class="cu-search-box"></div>
-      <div class="search-results-container">
-        <div id="primary-nav-search-results" class="cu-search-results"></div>
+      <div class="cu-two-column-gcs" id ="primary-nav-search">
+        <div class="cu-search-box"></div>
+        <div class="search-results-container">
+          <div class="cu-search-results"></div>
+        </div>
       </div>
     </div>
-
     <div class="nav-container global-nav">
       <%= render 'omni_nav_v2/global_nav' %>
     </div>
-
   </div>
-
   <%= render 'omni_nav_v2/off_canvas_nav' %>
-
+  <div id="search-results-overlay"></div>
 </div>
