--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -93,6 +93,19 @@
             height: 23px;
             width: 75%;
           }
+
+          a.default.off-logo {
+            background: image-url('chapman_logo_horizontal_color.png'); // IE 8
+            background: image-url('chapman_logo_horizontal_color.svg'), linear-gradient(transparent, transparent);
+            background-repeat: no-repeat;
+            background-size: contain;
+
+            @include bp(m) {
+              height: 28px;
+              width: 273px;
+              margin: 0;
+            }
+          }
         }
 
         svg { color: $black; }
