adjusts class name to match omninav v2, not v1

--- a/app/views/omni_nav_v2/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav_v2/_off_canvas_nav.html.erb
@@ -22,7 +22,7 @@
       <% end %>
 
       <div id="main-logo" class="toggle-logo">
-        <a class="default-logo-cu off-logo" href="/" title="Chapman University Website Home Page">
+        <a class="default off-logo" href="/" title="Chapman University Website Home Page">
           <!-- logo set as background image by class -->
         </a>
         <span class="close" id="js-close-off-canvas-nav">
