added functionality for search filter dropdown

--- a/app/views/omni_nav_v2/_utility_nav.html.erb
+++ b/app/views/omni_nav_v2/_utility_nav.html.erb
@@ -56,25 +56,24 @@
         </li>
       </ul>
     </div>
-    <div class="utility-nav-container utility-search">
+    <div class="utility-nav-container utility-search cu-two-column-gcs" id ="utility-nav-search">
       <ul class="utility-list">
         <li class="utility-cell search-type utility-has-dropdown">
-          <a id="selected-search-type">Search From</a>
+          <a class="selected-search-filter">Search From</a>
           <div class="utility-dropdown dropdown">
             <ul>
-              <li class="search-type-option"><a>All</a></li>
-              <li class="search-type-option"><a>Blog Stories</a></li>
-              <li class="search-type-option"><a>Faculty</a></li>
-              <li class="search-type-option"><a>Events</a></li>
+              <li class="search-filter-option"><a>All</a></li>
+              <li class="search-filter-option"><a>Blog Stories</a></li>
+              <li class="search-filter-option"><a>Faculty Directory</a></li>
+              <li class="search-filter-option"><a>Events</a></li>
+              <li class="search-filter-option"><a>Main Website</a></li>
             </ul>
           </div>
         </li>
         <li class="utility-cell">
-          <div class="cu-two-column-gcs" id ="utility-nav-search">
-            <div class="cu-search-box"></div>
-            <div class="search-results-container">
-              <div class="cu-search-results"></div>
-            </div>
+          <div class="cu-search-box"></div>
+          <div class="search-results-container">
+            <div class="cu-search-results"></div>
           </div>
         </li>
       </ul>
