--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -172,6 +172,13 @@ html.omni-nav-v2 {
 
     .gs-visibleUrl { color: #2f2f2f; }
 
+    .gs-per-result-labels a.gs-label, span {
+      color: $black;
+      font-size: 12px;
+      line-height: 12px;
+      vertical-align: inherit;
+    }
+
     // Custom more results link
     .more-results, .utility-nav .more-results {
         display: block;
