--- a/subprojects/degrees-and-programs/source/static/app/assemble/includes/_svg.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/includes/_svg.hbs
@@ -1,5 +1,13 @@
 <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <defs>
+<symbol id="icon-list" viewBox="0 0 32 32">
+<title>list</title>
+<path d="M31 3.5h-30c-0.6 0-1-0.4-1-1v-1.5c0-0.6 0.4-1 1-1h30c0.6 0 1 0.4 1 1v1.5c0 0.6-0.4 1-1 1z"></path>
+<path d="M31 10.6h-30c-0.6 0-1-0.4-1-1v-1.5c0-0.6 0.4-1 1-1h30c0.6 0 1 0.4 1 1v1.5c0 0.6-0.4 1-1 1z"></path>
+<path d="M31 17.8h-30c-0.6 0-1-0.4-1-1v-1.5c0-0.6 0.4-1 1-1h30c0.6 0 1 0.4 1 1v1.5c0 0.5-0.4 1-1 1z"></path>
+<path d="M31 24.9h-30c-0.6 0-1-0.4-1-1v-1.5c0-0.6 0.4-1 1-1h30c0.6 0 1 0.4 1 1v1.5c0 0.5-0.4 1-1 1z"></path>
+<path d="M31 32h-30c-0.6 0-1-0.4-1-1v-1.5c0-0.6 0.4-1 1-1h30c0.6 0 1 0.4 1 1v1.5c0 0.6-0.4 1-1 1z"></path>
+</symbol>
 <symbol id="icon-book" viewBox="0 0 32 32">
 <title>book</title>
 <path d="M3.837 29.794c-0.362 0-0.663-0.294-0.663-0.663v-24.594c0-0.362 0.294-0.663 0.663-0.663s0.663 0.294 0.663 0.663v24.594c-0.006 0.369-0.3 0.663-0.663 0.663z"></path>
@@ -181,10 +189,6 @@
 <symbol id="icon-grid" viewBox="0 0 32 32">
 <title>grid</title>
 <path d="M8 12h4v-4h-4v4zM14 12h4v-4h-4v4zM20 8v4h4v-4h-4zM8 18h4v-4h-4v4zM14 18h4v-4h-4v4zM20 18h4v-4h-4v4zM8 24h4v-4h-4v4zM14 24h4v-4h-4v4zM20 24h4v-4h-4v4z"></path>
-</symbol>
-<symbol id="icon-list" viewBox="0 0 32 32">
-<title>list</title>
-<path d="M0 0h8v8h-8zM12 2h20v4h-20zM0 12h8v8h-8zM12 14h20v4h-20zM0 24h8v8h-8zM12 26h20v4h-20z"></path>
 </symbol>
 <symbol id="icon-search2" viewBox="0 0 32 32">
 <title>search2</title>
