--- a/app/views/omni_nav_v2/_utility_nav.html.erb
+++ b/app/views/omni_nav_v2/_utility_nav.html.erb
@@ -56,7 +56,7 @@
         </li>
       </ul>
     </div>
-    <div class="utility-nav-container utility-search cu-two-column-gcs" id ="utility-nav-search">
+    <div class="utility-nav-container utility-search" id="utility-nav-search">
       <ul class="utility-list">
         <li class="utility-cell search-type utility-has-dropdown">
           <a class="selected-search-filter">Search From</a>
