--- a/app/views/omni_nav_v2/omninav.html.erb
+++ b/app/views/omni_nav_v2/omninav.html.erb
@@ -127,12 +127,10 @@
         </div>
       </div>
     </div>
-    <div class="nav-container primary-nav-search">
-      <div class="cu-two-column-gcs" id ="primary-nav-search">
-        <div class="cu-search-box"></div>
-        <div class="search-results-container">
-          <div class="cu-search-results"></div>
-        </div>
+    <div class="nav-container" id="primary-nav-search">
+      <div class="cu-search-box"></div>
+      <div class="search-results-container">
+        <div class="cu-search-results"></div>
       </div>
     </div>
     <div class="nav-container global-nav">
