changes right col max-width to width

--- a/app/assets/stylesheets/layout_old/right-column.scss
+++ b/app/assets/stylesheets/layout_old/right-column.scss
@@ -78,7 +78,7 @@
     position: relative;
     display: inline-block;
     float: right;
-    max-width: 206px;
+    width: 206px;
     margin-top: 45px;
     padding-right: 0;
   }
