add accessibility section to homepage, and rename global footer link
Add new section near end of CU homepage for statement on accessibility
and link to resources and form; Also change the global footer link of
Feedback to Report an Accessibility Concern

--- a/app/views/_cascade/blocks/html/_footer.html
+++ b/app/views/_cascade/blocks/html/_footer.html
@@ -36,7 +36,7 @@
             <li><a href="/students/health-and-safety/disability-services/index">Disability Services</a></li>
             <li><a href="/students/health-and-safety/title-ix/index">Title IX</a></li>
             <li><a href="/emergency/alert">Emergency Information</a></li>
-            <li><a href="/website-feedback-form">Feedback</a></li>
+            <li><a href="/website-feedback-form">Report an Accessibility Concern</a></li>
           </ul>
         </div>
         <!-- SOCIAL -->
