fix spacing on dept listing pages

--- a/app/assets/stylesheets/layout_old/faculty/main-faculty-search-results.scss
+++ b/app/assets/stylesheets/layout_old/faculty/main-faculty-search-results.scss
@@ -1,81 +1,75 @@
 //used by main listing for faculty directory at /our-faculty (NOT the school/dept listing pages)
-
+//
 .searchResults {
-  padding: 0 20px 20px 20px;
-  margin: 0 0 20px 0;
-  background-color: $white;
-  
-  .summary {
-    border-bottom: 1px dotted #565555;
-    padding: 10px 0 10px 0;    
-	.results {
-      font-size: 16px;
-    } 
-	
-    .resultsFor {
-      font-style: italic;
-      font-size: 14px;
-      border-left: 1px solid $black;
-      margin: 0 0 0 10px;
-      padding: 0 0 0 10px;
-    }
-  } // end summary
-  
-  .result {
-    padding: 15px 0 15px 85px;
-    border-bottom: 1px solid $cu-border;
-    min-height: 120px;
-    position: relative;
-    line-height: 1.1;
-	
-	.affiliation {
-			margin-top:5px
-	}
-    .button {
-		display: block;
-		float: right;
-		border-bottom: none;
-		margin-left: 5px;
-		padding:10px;
-		max-width: 120px;
-    }
-    .profilePicture {
-      position: absolute;
-      top: 2px;
-      left: 5px;
-      height: 103px;
-      width: 74px;
-      overflow: hidden;
-    }
-    .image {
-      position: absolute;
-      top: 10px;
-      left: 0;
-    }
-    .name {
-      font-size: 18px;
-    }
-
-  } // end result
-  
-  .pagingInfo {
-    margin: 10px 0 0 0;
-    .pagingNavigation {
-      color: $cu-red;
-      > span {
-        &:first-child {
-          border: none;
+    padding: 0 20px 20px 20px;
+    margin: 0 0 20px 0;
+    background-color: $white;  
+    .summary {
+        border-bottom: 1px dotted #565555;
+        padding: 10px 0 10px 0;    
+        .results {
+            font-size: 16px;
         }
-        padding: 0 4px 0 4px;
-        border-left: 1px solid $black;
-        text-decoration: underline;
-        cursor: hand;
-        cursor: pointer;
-      }
-      @include bp(m) {
-        float: right;
-      }
-    }
-  } // end pagingInfo
-  
+        .resultsFor {
+          font-style: italic;
+          font-size: 14px;
+          border-left: 1px solid $black;
+          margin: 0 0 0 10px;
+          padding: 0 0 0 10px;
+        }
+    } // end summary
+    .result {
+        padding: 15px 0 15px 85px;
+        border-bottom: 1px solid $cu-border;
+        min-height: 120px;
+        position: relative;
+        line-height: 1.1;	
+        .affiliation {
+            margin-top:5px
+        }
+        .button {
+            display: block;
+            float: right;
+            border-bottom: none;
+            margin-left: 5px;
+            padding:10px;
+            max-width: 120px;
+        }
+        .profilePicture {
+            position: absolute;
+            top: 2px;
+            left: 5px;
+            height: 103px;
+            width: 74px;
+            overflow: hidden;
+        }
+        .image {
+            position: absolute;
+            top: 10px;
+            left: 0;
+        }
+        .name {
+            font-size: 18px;
+        }
+    } // end result
+
+    .pagingInfo {
+        margin: 10px 0 0 0;
+        .pagingNavigation {
+            color: $cu-red;
+            > span {
+                &:first-child {
+                    border: none;
+                }
+                padding: 0 4px 0 4px;
+                border-left: 1px solid $black;
+                text-decoration: underline;
+                cursor: hand;
+                cursor: pointer;
+            }
+            @include bp(m) {
+                float: right;
+            }
+        }
+    } // end pagingInfo
 }
