some content changes

--- a/app/views/omni_nav_v2/_utility_nav.html.erb
+++ b/app/views/omni_nav_v2/_utility_nav.html.erb
@@ -14,8 +14,17 @@
             </ul>
           </div>
         </li>
-        <li class="utility-cell utility-has-dropdown"><a>Degrees &amp; Programs</a></li>
-        <li class="utility-cell utility-has-dropdown"><a>Map &amp; Directories</a></li>
+        <li class="utility-cell"><a>Degrees &amp; Programs</a></li>
+        <li class="utility-cell utility-has-dropdown">
+          <a>Map &amp; Directories</a>
+          <div class="utility-dropdown dropdown">
+            <ul>
+              <li><a>Interactive Map</a></li>
+              <li><a>Faculty Directory</a></li>
+              <li><a>All Directories</a></li>
+            </ul>
+          </div>
+        </li>
         <li class="utility-cell"><a>Blogs</a></li>
         <li class="utility-cell"><a>Events</a></li>
         <li class="utility-cell utility-has-dropdown">
