--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -595,11 +595,15 @@ html.omni-nav-v2 {
           }
 
           &:hover {
-            .global-nav-dropdown { display: block; }
+            .global-nav-dropdown { 
+              visibility: visible;
+              opacity: 1;
+              @include vendorize(transition, opacity 0.3s ease-in);
+            }
           }
 
           .global-nav-dropdown {
-            display: none;
+            visibility: hidden;
             position: absolute;
             width: $primary-nav-dropdown-width;
             left: 0;
@@ -607,6 +611,7 @@ html.omni-nav-v2 {
             background-color: $white;
             -webkit-box-shadow: 0px 10px 10px 1px rgba(0, 0, 0, 0.2);
             box-shadow: 0px 10px 10px 1px rgba(0, 0, 0, 0.2);
+            opacity: 0;
 
             li {
               border-bottom: 1px solid $primary-nav-border-color;
