--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -318,6 +318,12 @@ html.omni-nav-v2 {
           background-color: #4d4d4d;
 
           & > a:after { transform: rotate(-180deg); }
+
+          .utility-dropdown {
+            visibility: visible;
+            opacity: 1;
+            @include vendorize(transition, opacity 0.3s ease-in);
+          }
         }
       }
 
@@ -325,6 +331,8 @@ html.omni-nav-v2 {
         background-color: #4d4d4d;
         -webkit-box-shadow: 0px 10px 10px 1px rgba(0, 0, 0, 0.2);
         box-shadow: 0px 10px 10px 1px rgba(0, 0, 0, 0.2);
+        visibility: hidden;
+        opacity: 0;
 
         li:hover { background-color: $utility-nav-background-color; }
       }
@@ -639,7 +647,7 @@ html.omni-nav-v2 {
   /* GENERAL DROPDOWN STYLES
   ---------------------------------------- */
   .dropdown {
-    display: none;
+    visibility: hidden;
     position: absolute;
     top: 60px; left: 0px;
     width: $primary-nav-dropdown-width;
