--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -797,11 +797,16 @@ html.omni-nav-v2 {
     position: relative;
 
     &:hover {
-      .login-menu { display: block; }
+      .login-menu { 
+        visibility: visible;
+        opacity: 1;
+        @include vendorize(transition, opacity 0.3s ease-in);
+      }
     }
 
     .login-menu {
-      display: none;
+      visibility: hidden;
+      opacity: 0;
       position: absolute;
       top: 60px;
       right: -20px;
