small content changes, trying to keep it relatively in sync with correct wording/links

--- a/app/views/omni_nav_v2/_utility_nav.html.erb
+++ b/app/views/omni_nav_v2/_utility_nav.html.erb
@@ -25,7 +25,7 @@
             </ul>
           </div>
         </li>
-        <li class="utility-cell"><a>Blogs</a></li>
+        <li class="utility-cell"><a>News</a></li>
         <li class="utility-cell"><a>Events</a></li>
         <li class="utility-cell utility-has-dropdown">
           <a>Social</a>
