--- a/app/views/omni_nav_v2/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav_v2/_off_canvas_nav.html.erb
@@ -207,16 +207,7 @@
             </span>
           </li>
           <li>
-            <a>Blogs</a>
-            <span class="toggle">
-              <span>
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512">
-                  <title></title>
-                  <g id="icomoon-ignore"></g>
-                  <path d="M480 224h-192v-192h-64v192h-192v64h192v192h64v-192h192z"></path>
-                </svg>
-              </span>
-            </span>
+            <a href="#">News</a>
           </li>
           <li>
             <a href="#">Events</a>
