Change Happenings to News and Stories on various templates and widgets
chg Happenings title to News and Stories, blogs links from /happenings
to /news-and-stories; setup new cache name and modify dropdowns in
widgets to use new name; delete slideshow data definition (very old
template not used)

--- a/app/views/_cascade/blocks/html/_footer.html
+++ b/app/views/_cascade/blocks/html/_footer.html
@@ -7,7 +7,7 @@
         <div class="link-container">
           <div class="links-header"><h2>Connect</h2></div>
           <ul class="link-list">
-            <li><a href="http://blogs.chapman.edu/happenings/">News</a></li>
+            <li><a href="http://blogs.chapman.edu/news-and-stories/">News and Stories</a></li>
             <li><a href="http://blogs.chapman.edu/press-room/">Press Room</a></li>
             <li><a href="https://events.chapman.edu/">Events</a></li>
             <li><a href="/directory/index">Directory</a></li>
