--- a/app/views/widgets/home_page/_blog_stories.html
+++ b/app/views/widgets/home_page/_blog_stories.html
@@ -22,8 +22,8 @@
     <!--end announcement-->
     <div class="third">
       <article class="story story-1">
-        <a class="tag" href="//blogs.chapman.edu/happenings/category/campus-life/">#Campus Life</a>
-        <a class="permalink smc-cta" data-cta-id="Trending Story 1" data-cta-label="International Students to be Greeted with a World of Support" href="http://blogs.chapman.edu/happenings/2016/08/10/international-students-to-be-greeted-with-a-world-of-support/">
+        <a class="tag" href="//blogs.chapman.edu/news-and-stories/category/campus-life/">#Campus Life</a>
+        <a class="permalink smc-cta" data-cta-id="Trending Story 1" data-cta-label="International Students to be Greeted with a World of Support" href="http://blogs.chapman.edu/news-and-stories/2016/08/10/international-students-to-be-greeted-with-a-world-of-support/">
           <h2 class="title">International Students to be Greeted with a World of Support</h2>
           <!-- LIMIT THIS FIELD TO 50 CHARACTERS -->
           <div class="story-bg" style="background-image:url('http://www.chapman.edu/_files/img/homepage-blog-stories/trending-stories/international.jpg');">
@@ -32,11 +32,11 @@
         </a>
         <footer class="story_footer">
           <p class="source blogname ">
-            <a href="http://blogs.chapman.edu/happenings">Happenings</a>
+            <a href="http://blogs.chapman.edu/news-and-stories">News and Stories</a>
           </p>
           <p class="meta">
-            <a class="action facebook" href="http://www.facebook.com/sharer.php?u=http://blogs.chapman.edu/happenings/2016/08/10/international-students-to-be-greeted-with-a-world-of-support/" service="Facebook">Share on Facebook</a>
-            <a href="http://twitter.com/intent/tweet?text=International+Students+to+be+Greeted+with+a+World+of+Support&amp;url=http://blogs.chapman.edu/happenings/2016/08/10/international-students-to-be-greeted-with-a-world-of-support/" class="action twitter" service="Twitter">Post to Twitter</a>
+            <a class="action facebook" href="http://www.facebook.com/sharer.php?u=http://blogs.chapman.edu/news-and-stories/2016/08/10/international-students-to-be-greeted-with-a-world-of-support/" service="Facebook">Share on Facebook</a>
+            <a href="http://twitter.com/intent/tweet?text=International+Students+to+be+Greeted+with+a+World+of+Support&amp;url=http://blogs.chapman.edu/news-and-stories/2016/08/10/international-students-to-be-greeted-with-a-world-of-support/" class="action twitter" service="Twitter">Post to Twitter</a>
             <a class="icon shares" href="#"></a>
           </p>
         </footer>
@@ -66,8 +66,8 @@
     </div>
     <div class="third">
       <article class="story story-3">
-        <a class="tag" href="//blogs.chapman.edu/happenings/category/science-and-health/">#Science and Health</a>
-        <a class="permalink smc-cta" data-cta-id="Trending Story 3" data-cta-label="In Battle Against Fire-Prone Grasses, Chapman Professor Offers New Insight" href="http://blogs.chapman.edu/happenings/2016/08/05/in-battle-against-fire-prone-grasses-chapman-professor-offers-new-insight/">
+        <a class="tag" href="//blogs.chapman.edu/news-and-stories/category/science-and-health/">#Science and Health</a>
+        <a class="permalink smc-cta" data-cta-id="Trending Story 3" data-cta-label="In Battle Against Fire-Prone Grasses, Chapman Professor Offers New Insight" href="http://blogs.chapman.edu/news-and-stories/2016/08/05/in-battle-against-fire-prone-grasses-chapman-professor-offers-new-insight/">
           <h2 class="title">In Battle Against Fire-Prone Grasses, Chapman Professor Offers New Insight</h2>
           <!-- LIMIT THIS FIELD TO 50 CHARACTERS -->
           <div class="story-bg" style="background-image:url('http://www.chapman.edu/_files/img/homepage-blog-stories/trending-stories/fire-study.jpg');">
@@ -76,11 +76,11 @@
         </a>
         <footer class="story_footer">
           <p class="source blogname ">
-            <a href="http://blogs.chapman.edu/happenings">Happenings</a>
+            <a href="http://blogs.chapman.edu/news-and-stories">News and Stories</a>
           </p>
           <p class="meta">
-            <a class="action facebook" href="http://www.facebook.com/sharer.php?u=http://blogs.chapman.edu/happenings/2016/08/05/in-battle-against-fire-prone-grasses-chapman-professor-offers-new-insight/" service="Facebook">Share on Facebook</a>
-            <a href="http://twitter.com/intent/tweet?text=In+Battle+Against+Fire-Prone+Grasses%2C+Chapman+Professor+Offers+New+Insight&amp;url=http://blogs.chapman.edu/happenings/2016/08/05/in-battle-against-fire-prone-grasses-chapman-professor-offers-new-insight/" class="action twitter" service="Twitter">Post to Twitter</a>
+            <a class="action facebook" href="http://www.facebook.com/sharer.php?u=http://blogs.chapman.edu/news-and-stories/2016/08/05/in-battle-against-fire-prone-grasses-chapman-professor-offers-new-insight/" service="Facebook">Share on Facebook</a>
+            <a href="http://twitter.com/intent/tweet?text=In+Battle+Against+Fire-Prone+Grasses%2C+Chapman+Professor+Offers+New+Insight&amp;url=http://blogs.chapman.edu/news-and-stories/2016/08/05/in-battle-against-fire-prone-grasses-chapman-professor-offers-new-insight/" class="action twitter" service="Twitter">Post to Twitter</a>
             <a class="icon shares" href="#"></a>
           </p>
         </footer>
