--- a/app/views/widgets/home_page/_chapman_family.html
+++ b/app/views/widgets/home_page/_chapman_family.html
@@ -3,16 +3,16 @@
     <h2 class="heading skrollable skrollable-after" data-bottom="opacity:0;" data-center="opacity:1;">One Chapman Family. Many #ChapmanStories.</h2>
     <div class="third">
       <article class="story">
-        <a class="tag" href="//blogs.chapman.edu/alumni/category/alumni-spotlight/">#Alumni Spotlight</a>
-        <a class="permalink" href="//blogs.chapman.edu/alumni/2016/06/22/creative-cooking-chef-tiffany-lewis-04-brings-us-around-the-table-together/">
-          <h2 class="title">Chef Tiffany Lewis ’04 Brings Us Around the Table Together</h2>
-          <div class="story-bg" style="background-image:url('http://www.chapman.edu/_files/img/homepage-blog-stories/chapman-family-stories/tiffany-lewis.jpg');">
-            <img alt="Woman holding watermelon and smiling." src="http://www.chapman.edu/_files/img/homepage-blog-stories/chapman-family-stories/tiffany-lewis.jpg">
+        <a class="tag" href="//blogs.chapman.edu/news-and-stories/">#News and Stories</a>
+        <a class="permalink" href="//blogs.chapman.edu/news-and-stories/2017/11/10/annual-interfaith-service-remembers-kristallnacht-discussion-with-a-holocaust-survivor-79-years-later/">
+          <h2 class="title">Annual interfaith service remembers Kristallnacht</h2>
+          <div class="story-bg" style="background-image:url('//blogs.chapman.edu/wp-content/uploads/sites/10/2017/11/Billauer-580x360.jpg');">
+            <img alt="Engelina (Lowenberg) Billauer, holocaust survivor" src="//blogs.chapman.edu/wp-content/uploads/sites/10/2017/11/Billauer-580x360.jpg">
           </div>
         </a>
         <footer class="story_footer">
           <p class="source blogname ">
-            <a href="http://blogs.chapman.edu/alumni">Chapman Alumni</a>
+            <a href="http://blogs.chapman.edu/news-and-stories">News and Stories</a>
           </p>
           <p class="meta">
             <a class="action facebook" href="http://www.facebook.com/sharer.php?u=//blogs.chapman.edu/alumni/2016/06/22/creative-cooking-chef-tiffany-lewis-04-brings-us-around-the-table-together/" service="Facebook">Share on Facebook</a>
