--- a/app/views/widgets/primary_content/_featured_news_events_feed_1.html
+++ b/app/views/widgets/primary_content/_featured_news_events_feed_1.html
@@ -5,7 +5,7 @@
         <li>Events</li>
     </ul>
   <ul class="newsEventsContent">
-    <a class="no-js-link" href="https://blogs.chapman.edu/happenings/" title="View All News Stories">View All News »</a>
+    <a class="no-js-link" href="https://blogs.chapman.edu/news-and-stories/" title="View All News Stories">View All News »</a>
     <a class="no-js-link" href="https://events.chapman.edu/" title="View All Event Listings">View All Events »</a>
     <li class="active">
         <div class="featured">
@@ -78,7 +78,7 @@
           <!--<p class="copy ellipsis multiline"></p>-->
           <!--<a class="readMore">Read More »</a>-->
         </div>
-        <a class="allNews" href="http://blogs.chapman.edu/happenings">View all News »</a>
+        <a class="allNews" href="http://blogs.chapman.edu/news-and-stories">View all News »</a>
       </div>
     </li>
     <li>
