--- a/app/views/widgets/left_column/_news_events_1.html
+++ b/app/views/widgets/left_column/_news_events_1.html
@@ -11,7 +11,7 @@
     <li class="">Events</li>
   </ul>
   <ul class="newsEventsContent">
-    <a class="no-js-link" href="https://blogs.chapman.edu/happenings/" title="View All News Stories">View All News »</a>
+    <a class="no-js-link" href="https://blogs.chapman.edu/news-and-stories/" title="View All News Stories">View All News »</a>
     <a class="no-js-link" href="https://events.chapman.edu" title="View All Event Listings">View All Events »</a>
     <li class="active">
       <div class="featured">
@@ -88,7 +88,7 @@
           <div class="title">
             <a href="https://blogs.chapman.edu/happenings/2017/09/26/sylvia-mendez-segregation-still-exists-public-schools/">Sylvia Mendez: De facto segregation still exists in public schools</a>
           </div>
-        </div><a class="allNews" href="http://blogs.chapman.edu/happenings">View all News »</a>
+        </div><a class="allNews" href="http://blogs.chapman.edu/news-and-stories">View all News »</a>
       </div>
     </li>
     <li class="">
